--- a/src/log4j2.properties
+++ b/src/log4j2.properties
@@ -16,12 +16,12 @@ appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} -
 #ver : https://logging.apache.org/log4j/log4j-2.4/manual/appenders.html
 
 logger.logapp.name=ar.edu.udc
-logger.logapp.level = info
+logger.logapp.level = debug
 logger.logapp.appenderRefs = file
 logger.logapp.appenderRef.file.ref = LOGFILE
 
 logger.logbiblioteca.name=ar.edu.udc.lapii.logging.biblioteca
-logger.logbiblioteca.level = info
+logger.logbiblioteca.level = debug
 logger.logbiblioteca.appenderRefs = file
 logger.logbiblioteca.appenderRef.file.ref = LOGFILE
 
