Se corrige nombre del proyecto

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LP</name>
+	<name>LAPII-EjemplosUnidad05-Excepciones</name>
 	<comment></comment>
 	<projects>
 	</projects>
