Mejor inicio par aejemplo logging

--- a/src/log4j2.properties
+++ b/src/log4j2.properties
@@ -11,20 +11,20 @@ appender.file.type = File
 appender.file.name = LOGFILE
 appender.file.fileName=${filename}/applog.log
 appender.file.layout.type=PatternLayout
-appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{5} - %msg%n
 
 #ver : https://logging.apache.org/log4j/log4j-2.4/manual/appenders.html
 
-logger.logapp.name=ar.edu.udc
-logger.logapp.level = debug
+logger.logapp.name=ar.edu.udc.lapii.logging.app
+logger.logapp.level = error
 logger.logapp.appenderRefs = file
 logger.logapp.appenderRef.file.ref = LOGFILE
 
 logger.logbiblioteca.name=ar.edu.udc.lapii.logging.biblioteca
-logger.logbiblioteca.level = debug
+logger.logbiblioteca.level = error
 logger.logbiblioteca.appenderRefs = file
 logger.logbiblioteca.appenderRef.file.ref = LOGFILE
 
-rootLogger.level = debug
+rootLogger.level = error
 rootLogger.appenderRefs = console
 rootLogger.appenderRef.stdout.ref = STDOUT
